--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@nestjs/platform-express": "^10.3.10",
     "aws-sdk": "^2.1664.0",
     "axios": "^1.7.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
