--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
       "^.+\\.(t|j)s$": "ts-jest"
     },
     "collectCoverageFrom": [
-      "**/*.(t|j)s"
+      "**/*.(t|j)s",
+      "!**/*.spec.ts"
     ],
+    "coverageReporters": ["lcov", "text"],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
